--- a/css/css-demo/practice.css
+++ b/css/css-demo/practice.css
@@ -1,3 +1,12 @@
 #contact-info {
 	font-size: .8em;
 }
+.job {
+	background-color: #e9e5dc;
+	border-radius: 10px;
+	padding: 10px;
+	margin: 10px;
+}
+.list {
+	font-size: .8em;
+}
