--- a/css/responsive-design/style.css
+++ b/css/responsive-design/style.css
@@ -12,6 +12,7 @@ cite {
 #external-links ul {
   list-style-type: none;
   padding-left: 0px;
+  width: 756px;
 }
 
 /* you're welcome to edit the
@@ -29,4 +30,18 @@ figure {
 figcaption {
   font-style: italic;
   text-align: right;
+}
+
+body {
+  width: 960px;
+}
+
+#external-links {
+  position: relative;
+  left: 250px;
+  top: 250px;
+  width: 200px;
+  display: inline-block;
+  vertical-align: top;
+  float: right;
 }
